changed forgotten naming space

--- a/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
@@ -1,4 +1,4 @@
-﻿@using ILostTimeWebWebApp.Services
+﻿﻿@using LostTimeWeb.WebApp.Services;
 
 @{
     string location = string.Format( "{0}://{1}/", Context.Request.Scheme, Context.Request.Host );
