--- a/src/LostTimeWeb.WebApp/Views/Account/Login.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@using ILostTimeWebWebApp.Models.AccountViewModels
+﻿@using LostTimeWeb.WebApp.Models.AccountViewModels
 @using Mvc.Client.Extensions
 
 @model LoginViewModel
