--- a/src/LostTimeWeb.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewData[ "Title" ] - Primary school</title>
+    <title>@ViewData[ "Title" ]</title>
 
     @Html.Partial( "_AppStyles" )
 </head>
