added UserEdit service and vue, POCO added ; corrected a few name;

--- a/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 
     <script>
         (function () {
-            var primarySchool = (function () {
+            var webapp = (function () {
                 var identity = null;
 
                 var getIdentity = function () {
@@ -36,8 +36,7 @@
                 };
             })();
 
-            this.ITI = this.ITI || {};
-            this.LostTimeWeb = primarySchool;
+            this.LostTimeWeb = webapp;
         })();
     </script>
 
