UserEdit.js : mute Poco Client Side AccountController : replace _userService.FindUser by poco.checkModel HomeController : replace _userService.GetAuthenticationProviders by String editing Poco.cs Authentificated.cshtml : IEnumerable<string> providers by string Index.cshtml : IEnumerable<string> providers by string

--- a/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
@@ -5,8 +5,10 @@
     Token token = ( Token )ViewData[ "Token" ];
     string email = ( string )ViewData[ "Email" ];
     string breachPadding = ( string )ViewData[ "BreachPadding" ];
-    IEnumerable<string> providers = ( IEnumerable<string> )ViewData[ "Providers" ];
-    string providerNames = string.Join( ",", providers.Select( p => string.Format( "'{0}'", p ) ) );
+    <!--//IEnumerable<string> providers = ( IEnumerable<string> )ViewData[ "Providers" ];
+    //string providerNames = string.Join( ",", providers.Select( p => string.Format( "'{0}'", p ) ) );-->
+    string providerNames = ( string )ViewData[ "Providers" ];
+    providerNames = string.Format( "'{0}'", providerNames);
 }
 
 <!DOCTYPE html>
