--- a/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
 @{
     Token token = ( Token )ViewData[ "Token" ];
     string email = ( string )ViewData[ "Email" ];
-    IEnumerable<string> providers = ( IEnumerable<string> )ViewData[ "Providers" ];
-    string providerNames = providers == null ? string.Empty : string.Join( ",", providers.Select( p => string.Format( "'{0}'", p ) ) );
+    <!--IEnumerable<string> providers = ( IEnumerable<string> )ViewData[ "Providers" ];
+    string providerNames = providers == null ? string.Empty : string.Join( ",", providers.Select( p => string.Format( "'{0}'", p ) ) );-->
+    string providerNames = ( string )ViewData[ "Providers" ];
+    providerNames = string.Format( "'{0}'", providerNames);
 }
 <!DOCTYPE html>
 
