solved reload post auth ;

--- a/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
@@ -19,6 +19,7 @@
     <title>Authenticated</title>
 </head>
 <body>
+    <p>connected</p>
     <script>
         (function () {
             window.opener.postMessage(JSON.stringify({
