--- a/src/LostTimeWeb.WebApp/Views/Account/LogOff.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/LogOff.cshtml
@@ -10,6 +10,7 @@
     <title>Signed out</title>
 </head>
 <body>
+    <p>disconnected</p>
     <script>
         (function () {
             var origin = window.opener || window.parent;
