solved reload probem ; connected with the database :)

--- a/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
@@ -22,6 +22,7 @@
     <p>connected</p>
     <script>
         (function () {
+            console.log("trying to send the message");
             window.opener.postMessage(JSON.stringify({
                 type: 'authenticated',
                 payload: {
@@ -33,8 +34,7 @@
                     boundProviders: [@Html.Raw( providerNames )]
                 }
             }), '@location');
-
-            window.close();
+            //window.close();
         })();
     </script>
     <!-- @breachPadding -->
