added user display ; reading Id

--- a/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
@@ -34,7 +34,7 @@
                     boundProviders: [@Html.Raw( providerNames )]
                 }
             }), '@location');
-            //window.close();
+            window.close();
         })();
     </script>
     <!-- @breachPadding -->
