UpDate News Service connection à newsGateway

--- a/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
@@ -4,6 +4,7 @@
     string location = string.Format( "{0}://{1}/", Context.Request.Scheme, Context.Request.Host );
     Token token = ( Token )ViewData[ "Token" ];
     string email = ( string )ViewData[ "Email" ];
+    string Id = ( string )ViewData["Id"];
     string breachPadding = ( string )ViewData[ "BreachPadding" ];
  <!--   //IEnumerable<string> providers = ( IEnumerable<string> )ViewData[ "Providers" ];
     //string providerNames = string.Join( ",", providers.Select( p => string.Format( "'{0}'", p ) ) );-->
@@ -30,6 +31,7 @@
                         expires_in: @token.ExpiresIn
                     },
                     email: '@email',
+                    id: '@Id',
                     boundProviders: [@Html.Raw( providerNames )]
                 }
             }), '@location');
