--- a/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Account/Authenticated.cshtml
@@ -5,6 +5,7 @@
     Token token = ( Token )ViewData[ "Token" ];
     string email = ( string )ViewData[ "Email" ];
     string Id = ( string )ViewData["Id"];
+    string role = (string)ViewData["Role"];
     string breachPadding = ( string )ViewData[ "BreachPadding" ];
  <!--   //IEnumerable<string> providers = ( IEnumerable<string> )ViewData[ "Providers" ];
     //string providerNames = string.Join( ",", providers.Select( p => string.Format( "'{0}'", p ) ) );-->
@@ -33,6 +34,7 @@
                     },
                     email: '@email',
                     id: '@Id',
+                    role: '@role',
                     boundProviders: [@Html.Raw( providerNames )]
                 }
             }), '@location');
