solved UserProfile Display and Edit;

--- a/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
     string email = ( string )ViewData[ "Email" ];
     string Id = (string)ViewData["Id"];
     string role = (string)ViewData["Role"];
-    <!--IEnumerable<string> providers = ( IEnumerable<string> )ViewData[ "Providers" ];
-    string providerNames = providers == null ? string.Empty : string.Join( ",", providers.Select( p => string.Format( "'{0}'", p ) ) );-->
+    //IEnumerable<string> providers = ( IEnumerable<string> )ViewData[ "Providers" ];
+    //string providerNames = providers == null ? string.Empty : string.Join( ",", providers.Select( p => string.Format( "'{0}'", p ) ) );
     string providerNames = ( string )ViewData[ "Providers" ];
     providerNames = string.Format( "'{0}'", providerNames);
 }
