added EditPassword vue; added favicon;

--- a/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
@@ -11,9 +11,10 @@
 }
 <!DOCTYPE html>
 
-<html>
+<html lang="zxx">
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="shortcut icon" href="images/logoLostTime.ico">
     <title>LostTime</title>
     @Html.Partial("_AppStyles")
 </head>
