--- a/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 }
 <!DOCTYPE html>
 
-<html lang="zxx">
+<html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="images/logoLostTime.ico">
