solved loop in edit; fixed editing another profile; fixed favicon;

--- a/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link rel="shortcut icon" href="images/logoLostTime.ico">
+    <link rel="shortcut icon" href="../images/logoLostTime.ico">
     <title>LostTime</title>
     @Html.Partial("_AppStyles")
 </head>
