added gear on h3

--- a/src/LostTimeWeb.WebApp/App/losttimeweb/src/styles/global.less
+++ b/src/LostTimeWeb.WebApp/App/losttimeweb/src/styles/global.less
@@ -8,3 +8,20 @@
     font-size: 18px;
     color: red;
 }
+h3
+{
+    position:relative;
+    padding-left:30px;
+}
+h3:before
+{
+    background:url('../../dist/img/gearblack.png') top right no-repeat;
+    position:absolute;
+    content:" ";
+    bottom:-30px;
+    left:-45px;
+    width:90px;
+    height:90px;
+    transform: scale(0.6);
+    
+}
