--- a/src/LostTimeWeb.WebApp/Views/Shared/_AppStyles.cshtml
+++ b/src/LostTimeWeb.WebApp/Views/Shared/_AppStyles.cshtml
@@ -1,7 +1,10 @@
 ﻿<environment names="Development">
     <link rel="stylesheet" type="text/css" media="screen" href="http://localhost:8080/dist/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="http://localhost:8080/dist/fonts/stylesheet.css" />
 </environment>
 
 <environment names="Staging,Production">
     <link rel="stylesheet" type="text/css" media="screen" href="~/dist/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="~/dist/fonts/stylesheet.css" />
+    
 </environment>
